@@ -71,7 +71,7 @@
 
 	<widget>
 	  <class>GtkCheckButton</class>
-	  <name>drawer-auto-close</name>
+	  <name>drawer-autoclose</name>
 	  <can_focus>True</can_focus>
 	  <label>_Close drawer if a launcher inside it is pressed</label>
 	  <active>False</active>
