@@ -1,3 +1,11 @@
+2001-12-11 Stephen Browne <stephen.browne@sun.com>
+
+	* gnome-properties.c gnome-properties.glade
+	  menu.c
+
+	 Fixed confirm-panel-removal and drawer-autoclose config
+	 Gave the global props dialog a proper name
+
 2001-12-11  Anders Carlsson  <andersca@gnu.org>
 
 	* main.c (main): Always restart here.
